Implementa funcionalidade que remove um personagem

--- a/index.html
+++ b/index.html
@@ -23,7 +23,8 @@
             <div class="item" v-for="item of characters">
                 <img :src="item.avatar" :alt="item.nome" />
                 <p>{{ item.nome }}</p>
-                <button @click="like(item.nome)" data-test="like">Like</button>
+                <button @click="like(item.nome)" data-test="Like">Like</button>
+                <button @click="remove(item.id)" data-test="Remover">Remover</button>
             </div>
         </div>
     </div>
