Substitui botões por ícones

--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Star Wars</title>
     <link rel="stylesheet" href="css/styles.css" />
+    <link rel="stylesheet"
+        href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
 </head>
 
 <body>
@@ -15,7 +17,7 @@
         <small>Olá, {{ userName}}</small>
 
         <form>
-            <input placeholder="Busca por nome..." v-model="searchName"/>
+            <input placeholder="Busca por nome..." v-model="searchName" />
             <button type="button" @click="search()">Buscar</button>
         </form>
 
@@ -23,8 +25,12 @@
             <div class="item" v-for="item of characters">
                 <img :src="item.avatar" :alt="item.nome" />
                 <p>{{ item.nome }}</p>
-                <button @click="like(item.nome)" data-test="Like">Like</button>
-                <button @click="remove(item.id)" data-test="Remover">Remover</button>
+                <span @click="like(item.nome)" class="like material-symbols-outlined">
+                    favorite
+                </span>
+                <span @click="remove(item.id)" class="delete material-symbols-outlined">
+                    delete
+                </span>
             </div>
         </div>
     </div>
